--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,7 +9,7 @@
   <div class='center'>
     <div class='title'>Classify Pokemon Images 🐻</div>
     <p>
-      Use images of <strong>Oshawott</strong>, <strong>Rowlet</strong>, <strong>Pikachu</strong> bears, or
+      Use images of <strong>Oshawott</strong>, <strong>Rowlet</strong>, <strong>Pikachu</strong>, or
       Mudkip!
     </p>
     <div class='content'>
