--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,10 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Pokemon Images 🐻</div>
+    <div class='title'>Classify Images 🐻</div>
     <p>
-      Use images of <strong>Oshawott</strong>, <strong>Rowlet</strong>, <strong>Pikachu</strong>, or
-      Mudkip!
+      Use images of <strong>Mickey Mouse</strong>, <strong>Spongebob Squarepants</strong>, or
+      <strong>Winnie the Pooh</strong>!
     </p>
     <div class='content'>
       <div class='no-display'>
